<resources>
    <!--Splash-->
    <string name="app_name">Sudoku World</string>
    <string name="splash_group_name">TEAM</string>
    <string name="splash_group_literal">SIGMA</string>
    <string name="music">Music:</string>
    <string name="music_credits">"Lightness Within"</string>
    <string name="music_website">- relaxdaily.net</string>



    <string name="play_button">Play</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="load_button">Load</string>
    <string name="continue_button">Continue</string>
    <string name="clear_button">Clear</string>
    <string name="enter_button">Enter</string>
    <string name="check_answer_button">Check\nAnswer</string>
    <string name="clear_cell_button">Clear\nCell</string>

    <string name="noSaves">NO SAVED DATA \n (screen is a WIP)</string>

    <!-- Menu -->
    <string name="settingsHeader">Settings</string>
    <string name="newGameHeader">New Game</string>
    <string name="continueGameHeader">Select Game</string>
    <string name="multiplayerHeader">Multiplayer</string>

    <string name="signedIn">Signed in as: </string>
    <string name="signedOut">Signed out</string>

    <string name="wordListHeader">Word List</string>
    <string name="nativeWords">Native Words</string>
    <string name="foreignWords">Foreign Words</string>
    <string name="gameModeLabel">Game Mode</string>
    <string name="foreignMode">Display foreign words in initial cells</string>
    <string name="nativeMode">Display native words in initial cells</string>
    <string name="numbersMode">Display numbers in all cells</string>
    <string name="difficultyLabel">Difficulty</string>
    <string name="difficultyEasy">Easy</string>
    <string name="difficultyMedium">Medium</string>
    <string name="difficultyHard">Hard</string>
    <string name="boardSizeLabel">Board Size</string>
    <string name="boardSize0">4x4</string>
    <string name="boardSize1">6x6</string>
    <string name="boardSize2">9x9</string>
    <string name="boardSize3">12x12</string>
    <string name="boardSize4">16x16</string>
    <string name="warningSetSize">*** Set Size is to small for board Size ***</string>
    <string name="audioMode">Listening Comprehension Mode</string>
    <string name="sfxSwitch">Sound Effects</string>
    <string name="musicSwitch">Background Music</string>
    <string name="hintsMode">Hints</string>
    <string name="saveWordListString">Save</string>
    <string name="defaultWordListString">Default</string>
    <string name="loadWordListString">Load</string>
    <string name="playButton">Play</string>
    <string name="RectangleMode">Display Sudoku Cells as Rectangles \n (WIP)</string>
    <string name="deleteButton">Delete</string>

    <!--Set Builder-->
    <string name="WordSetName">Default set</string>
    <string name="WordSetDescription">The default set</string>
    <string name="ChangeSet">Change Set</string>
    <string name="SetTabTitle">Sets</string>
    <string name="WordPairTabTitle">Pairs</string>
    <string name="Search">Search</string>
    <string name="nativeLanguageLabel">Native Language:</string>
    <string name="foreignLanguageLabel">Foreign Language:</string>
    <string name="title_wordset_list">Word Sets</string>
    <string name="title_wordset_detail">Word Set Detail</string>
    <string name="title_default_set">Default set</string>
    <string name="title_default_description">The default set</string>

    <!--Add word dialog-->
    <string name="NativeLanguage">Native Language</string>
    <string name="ForeignLanguage">Foreign Language</string>
    <string name="NativeWordHint">Native Word</string>
    <string name="ForeignWordHint">Foreign Word</string>
    <string name="SetName">Set Name</string>
    <string name="SetDescription">Description</string>
    <!-- Game Header -->
    <string name="backButton">Back</string>
    <!-- Multiplayer -->
    <string name="multiplayerSetUpTitle">Setting up game</string>
</resources>