<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme.MenuText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/settings_background"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                android:id="@+id/newGameHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@drawable/settings_header"
                android:text="@string/multiplayerHeader"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="22sp"
                android:textStyle="bold"
                />

        <TextView
                android:text="Under Construction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textAlignment="center"
                android:textSize="18sp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


            <Button
                    style="@style/AppTheme.RedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Host Game"
                    android:id="@+id/host"/>

            <Button
                    style="@style/AppTheme.RedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="My Invites"
                    android:id="@+id/invites"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/cancelButton"
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/red_button"
                        android:elevation="0dp"
                        android:text="@string/cancel_button"
                        android:textSize="15sp"/>

                <Button
                        android:id="@+id/quickGame"
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/red_button"
                        android:elevation="0dp"
                        android:text="@string/play_button"
                        android:textSize="15sp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>